name:           foracosta
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/appositum/foracosta#readme>
homepage:       https://github.com/appositum/foracosta#readme
bug-reports:    https://github.com/appositum/foracosta/issues
author:         Eddie
maintainer:     appositum@protonmail.com
copyright:      Eddie
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version: 1.12
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/appositum/foracosta

library
  exposed-modules:
      Foracosta
  other-modules:
      Paths_foracosta
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , containers
    , megaparsec
  default-language: Haskell2010

executable foracosta-exe
  main-is: Main.hs
  other-modules:
      Paths_foracosta
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , foracosta
    , containers
    , megaparsec
  default-language: Haskell2010

test-suite foracosta-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_foracosta
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , foracosta
  default-language: Haskell2010
